--- a/styles/styles.css
+++ b/styles/styles.css
@@ -161,11 +161,11 @@ details > summary:hover {
 }
 
 summary:after {
-    content: url(/assets/images/icon-plus.svg);
+    content: url(../assets/images/icon-plus.svg);
 }
 
 details[open] summary:after {
-    content: url(/assets/images/icon-minus.svg);
+    content: url(../assets/images/icon-minus.svg);
 }
 
 details[open] summary ~ * {
