--- a/styles/styles.css
+++ b/styles/styles.css
@@ -125,7 +125,8 @@ select {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 1.5rem;
+    padding-inline: 1.5rem;
+    padding-block: 8.9rem;
     gap: 1.5rem;
     font-family: WorkSans, sans-serif;
     font-weight: 300;
@@ -201,6 +202,12 @@ details[open] summary ~ * {
     font-size: 1rem;
     font-weight: 600;
     margin-bottom: 0.5rem;
+    gap: 1rem;
+}
+
+.details {
+    border-bottom: 1px solid var(--light-pink);
+    padding-bottom: 1rem;
 }
 
 @media screen and (min-width: 30rem) {
